--- a/web/src/pages/search/style.css
+++ b/web/src/pages/search/style.css
@@ -181,14 +181,7 @@ body {
     margin: 0;
     padding: 0;
 }
-.restaurant-card-link {
-    display: block;
-    text-decoration: none; /* Remove default underline */
-    border-radius: 8px; /* Rounded corners */
-    overflow: hidden; /* Hide overflowed content */
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Soft shadow */
-    transition: transform 0.3s ease, box-shadow 0.3s ease; /* Smooth transitions for hover effects */
-}
+
 .nav-links li {
     margin: 0 15px;
 }
@@ -671,6 +664,37 @@ form button{
     outline: none;
     cursor: pointer;
 }
+
+.add-to-cart-btn, .view-cart-btn {
+    padding: 10px 15px;
+    border: none;
+    border-radius: 5px;
+    font-size: 14px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.add-to-cart-btn {
+    background-color: #FFD04D;
+    color: #333;
+    font-weight: bold;
+    transition: all 0.3s ease;
+}
+
+.add-to-cart-btn:hover {
+    transform: scale(1.05);
+}
+
+.view-cart-btn {
+    background-color: #F12630;
+    color: #fff;
+    font-weight: bold;
+    transition: all 0.3s ease;
+}
+
+.view-cart-btn:hover {
+    transform: scale(1.05);
+}
 .social_icon .fa-brands{
     width: 40px;
     height: 40px;
@@ -824,13 +848,21 @@ footer p.copyright{
 /* Restaurant Card Styling */
 .restaurant-card {
     width: 100%;
-    max-width: 250px;
     background-color: #fff;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     overflow: hidden;
     text-align: left;
     padding: 20px;
+    height:100%;
+}
+.restaurant-card-link {
+    display: block;
+    text-decoration: none; /* Remove default underline */
+    border-radius: 8px; /* Rounded corners */
+    overflow: hidden; /* Hide overflowed content */
+    transition: transform 0.3s ease, box-shadow 0.3s ease; /* Smooth transitions for hover effects */
+    width: 270px;
 }
 
 .restaurant-card img {
