--- a/web/src/pages/Menu/Categories/categories.css
+++ b/web/src/pages/Menu/Categories/categories.css
@@ -296,7 +296,7 @@ body {
     width: 100%;
     height: 100%;
     background-size: cover;
-    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.7)), url('../Menu/Assets/slide1.png'); /* Set initial image */
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.7)), url('../Assets/slide1.png'); /* Set initial image */
     background-position: center;
     animation: slide 15s infinite;
     z-index: 1;
@@ -314,7 +314,7 @@ body {
 }
 
 .banner h2 {
-    font-size: 2.5rem;
+    font-size: 4.5rem;
     /* margin-bottom: 20px; */
 }
 
