--- a/web/src/pages/Admin/Admin.css
+++ b/web/src/pages/Admin/Admin.css
@@ -6,6 +6,9 @@
     box-sizing: border-box;
     font-family: 'Outfit', sans-serif;
 }
+body{
+    overflow: hidden;
+}
 
 /* Scrollbar Container */
 ::-webkit-scrollbar {
@@ -228,7 +231,7 @@ body {
     background: var(--main-color);
     color: #fff;
     overflow-y: auto;
-    transition: width 500ms;
+    transition: 500ms;
 }
 
 .sidebar-header {
@@ -256,7 +259,9 @@ body {
     margin-bottom: 1.5rem;
     list-style: none;
 }
-
+.sidebar-menu .logoutOption {
+    display: none;
+}
 .sidebar.activate .menu{
     display: none;
 }
@@ -288,6 +293,7 @@ body {
     display: flex; 
     align-items: center; 
     padding: 10px 15px;
+    justify-content: center;
 }
 
 .sidebar ul li:nth-of-type(4) a{
@@ -324,6 +330,7 @@ body {
     position: relative;
     margin-left: 240px;
     transition: margin-left 500ms;
+    z-index: 101;
 }
 
 header {
@@ -337,7 +344,7 @@ header {
     padding: 0rem 1rem;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: flex-end;
     border-bottom: 1px solid #ccc;
     transition: left 500ms;
 }
@@ -985,6 +992,13 @@ tr:hover {
     .sidebar .li_logout{
         display: none;
     }
+    .sidebar-toggle {
+        display: flex;
+        align-items: center;
+        font-size: 2.5rem;
+        justify-content: center;
+        margin-top: 10px;
+      }
 }
 
 @media only screen and (max-width: 860px) {
@@ -1076,24 +1090,53 @@ tr:hover {
 }
 
 @media only screen and (max-width: 450px) {
+    .sidebar {
+        height: 60px;
+        overflow: hidden;
+    }
+    .sidebar.sidebar.activate{
+        height: 100vh;
+    }
     main {
         padding-left: 1rem;
         padding-right: 1rem;
+        left: -60px;
+        position: relative;
+        width: 100vw;
+        overflow: auto;
+    }
+    #restaurant-table{
+        max-width: 300px;
+        overflow-x: scroll;
     }
     .sidebar .sidebar-header{
         display: none;
     }
 
-    .sidebar-toggle {
-        display: flex; /* Show toggle on mobile */
-        align-items: center; 
-    font-size: 1.9rem;
-  justify-content: center;
-    }
-
     .logout_btn {
         width: 100%;
         padding: 10px;
+    }
+    .sidebar li {
+        margin-top: 40px;
+    }
+    .sidebar-menu .logoutOption {
+        display: flex;
+    }
+    .profile{
+        flex-direction: column;
+        height: 70vh;
+    }
+    .setting-section{
+        width: 100%;
+        right: -100%;
+    }
+    .modal-content{
+        overflow-y: auto;
+        padding: 20px 20px 20px 20px;
+    }
+    .modal-header{
+        margin-bottom: 60px;
     }
     
 }
