--- a/web/src/pages/Restaurant/RestaurantDashboard.css
+++ b/web/src/pages/Restaurant/RestaurantDashboard.css
@@ -563,6 +563,17 @@ label.form-label {
 .sidebar-menu .logoutOption {
     display: none;
 }
+.sidebar-menu .logoutOption button{
+    display: flex;
+    gap: 20px;
+    background: transparent;
+    color: white;
+    border: none;
+    padding: 10px;
+}
+.sidebar-menu .logoutOption button:hover{
+    background-color: rgb(237, 0, 0);
+}
 .sidebar-menu ul {
     padding: 0 !important;
 }
