--- a/web/src/pages/Restaurant/RestaurantDashboard.css
+++ b/web/src/pages/Restaurant/RestaurantDashboard.css
@@ -764,6 +764,102 @@ main {
     min-height: 100vh;
     padding: 1rem 3rem;
 }
+/* Security Section Container */
+.security-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #0b0e14d8;
+    color: #fff;
+    font-family: 'Arial', sans-serif;
+    width: 100%;
+    height: 100vh;
+    z-index: 1001;
+    position: fixed;
+    top: 0;
+    left: 0;
+}
+
+/* Card Container */
+.security-card {
+    background: #1c1f26;
+    border-radius: 10px;
+    padding: 30px;
+    max-width: 450px;
+    width: 100%;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+    text-align: left;
+    position: relative;
+}
+
+/* Header Section */
+.security-header {
+    display: flex;
+    align-items: center;
+    gap: 15px;
+    margin-bottom: 20px;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.lock-icon {
+    height: auto;
+    font-size: 50px;
+}
+
+.security-header h2 {
+    font-size: 1.5rem;
+    margin: 0;
+}
+
+/* Description */
+.security-description {
+    font-size: 0.9rem;
+    color: #b3b3b3;
+    margin-bottom: 25px;
+}
+
+/* Security Options */
+.security-option {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-top: 1px solid #2d3035;
+    padding: 15px 0;
+}
+
+.option-title {
+    font-weight: bold;
+    display: flex;
+    gap: 5px;
+    font-size: 1rem;
+}
+
+.option-subtitle {
+    font-size: 0.8rem;
+    color: #888;
+}
+
+.option-description {
+    color: #b3b3b3;
+    font-size: 0.8rem;
+    margin-top: 5px;
+    max-width: 100%;
+}
+
+/* Toggle Switch */
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 34px;
+    height: 20px;
+}
+
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
 
 .dash-title {
     color: var(--color-dark);
